# alhazen

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile_marimo  LICENSE  README.md  SECURITY  _modidx.py  core.py  docker-compose-huridocs.yml  docker-compose.yml  pyproject.toml  settings.ini
alhazen/: _modidx.py  agent.py  aliases.py  app.py  apps.py  backend.py  chains.py  core.py  demo.py  fire.py  gradio.py  gradio_demo.py  models.py  schema_python.py  schema_sqla.py  schema_sqla_old.py  toolkit.py  tools.py
alhazen-agent-client/: package copy.json  package-lock.json
alhazen-chat-client/: package-lock.json  package.json
alhazen-client/: package-lock.json  package.json
alhazen_resources/: tiab_prompts.yaml
dashboards/: 000_corpus_browser.py  000_metadata_extraction.py  001_chat.py  002_corpora_map.py  003_notes_browser.py
docs/: 11_ms_nlp_utils.html  20_ms_nlp_utils.html  30_ms_nlp_utils.html  91_ssl_hackfix.html  agent.html  agent_langserve_chain.html  airtable_utils.html  aliases.html  app.html  apps.html  backend.html  basic_tools.html  ceifns_db.html  chains.html  chat_langserve_chain.html  chatbot_gradio_app.html  client.html  core.html  curated_data_utils.html  demo.html  docnb1_use_cases.html  docnb2_architecture.html  general_langchain_utils.html  gradio_agent.html  html_text_extractor.html  index copy.html  index.html  jats_text_extractor.html  langchain_chat_main.html  langchain_output_parsers.html  listings.json  localdb.html  marimo_agent.html  metadata_extraction_tool.html  models.html  paperqa_emulation_tool.html  pdf_structured_extraction.html  pdf_text_extractor.html  protocol_extraction_tool.html  query_translator.html  (+18 more)
marimo/: 000_metadata_extraction_map.py  001_chat.py  002_corpora_map.py
nb_scratchpad/: 01_gradio_demos.ipynb  02_agent.ipynb  02_demo.ipynb  05_single_paper_qa.ipynb  06_agent_chat.ipynb  15_tiab_corpus_qa.ipynb  16_single_paper_qa.ipynb  35_dashdb.ipynb  35a_buildDB.ipynb  35b_queries.ipynb  36_web_robot.ipynb  40_image_tech_landscaping.ipynb  91_mlc.ipynb  93_llama_cpp.ipynb  94_huggingface.ipynb  95_full_text_reading_pdfs.ipynb  96_full_text_reading_llama_index.ipynb  96_full_text_reading_nxml.ipynb  97_SingleOpenAccessArticleChatBot.ipynb  DO_NOT_USE_THESE_NOTEBOOKS.md
(+317 files in other folders)
